--- a/src/main/resources/templates/viewPage01.html
+++ b/src/main/resources/templates/viewPage01.html
@@ -2,14 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>First Page</title>
 </head>
 <body>
     <div align="center">
         <h3>JDBC SpringbootDB Test</h3>
-        <a>Add Person Data</a>
-        <br>
+        <a th:href="@{/exam01/new}">Add Person Data</a>
+        <br><br>
         <table border="1" cellpadding="10">
             <tr>
                 <th>아이디</th>
@@ -24,7 +23,7 @@
                 <td th:text="${person.age}"></td>
                 <td th:text="${person.email}"></td>
                 <td>
-                    <a>Edit</a>&nbsp;&nbsp;&nbsp;
+                    <a th:href="@{'/exam01/edit/' + ${person.id}}">Edit</a>&nbsp;&nbsp;&nbsp;
                     <a>Delete</a>
                 </td>
             </tr>
