--- a/src/main/resources/templates/viewPage03.html
+++ b/src/main/resources/templates/viewPage03.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>First Page(JPA)</title>
+    <title>First Page(@Query Test)</title>
 </head>
 <body>
     <div align="center">
-        <h3>JDBC SpringbootDB Test</h3>
-        <a th:href="@{/exam02/new}">Add Member Data</a>
+        <h3>JPA SpringbootDB @Query Test</h3>
+        <a th:href="@{/exam03/new}">Add Member Data</a>
         <br><br>
         <table border="1" cellpadding="10">
             <tr>
@@ -23,8 +23,8 @@
                 <td th:text="${member.age}"></td>
                 <td th:text="${member.email}"></td>
                 <td>
-                    <a th:href="@{'/exam02/edit/' + ${member.id}}">Edit</a>&nbsp;&nbsp;&nbsp;
-                    <a th:href="@{'/exam02/delete/' + ${member.id}}">Delete</a>
+                    <a th:href="@{'/exam03/edit/' + ${member.id}}">Edit</a>&nbsp;&nbsp;&nbsp;
+                    <a th:href="@{'/exam03/delete/' + ${member.id}}">Delete</a>
                 </td>
             </tr>
         </table>
